infrastructure/kubernetes/plan-journey/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plan-journey
  namespace: plan-journey
  labels:
    app: plan-journey
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3004
      protocol: TCP
      name: http
  selector:
    app: plan-journey
